tests/parsing/cmc/errors/133.cmc
(define-system sys :subsys (a (b Int)))